[package]
name = "wtfwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
array-bytes = "6.2.2"
assert_cmd = "2.0.14"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
parity-scale-codec = "3.6.9"
reqwest = "0.11.24"
sailfish = "0.8.3"
subxt = "0.34.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
